--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -61,13 +61,16 @@
 											<a class="image fit"><img src="images/BackgroundIndexMappingFile.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/MazeParts0.png" alt=""></a>
+											<a class="image fit"><img src="images/Inky.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/MazeParts1.png" alt=""></a>
+											<a class="image fit"><img src="images/Blinky.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/MazeParts2.png" alt=""></a>
+											<a class="image fit"><img src="images/Pinky.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Clyde.png" alt=""></a>
 										</div>
 									</div>
 								</section>
