--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -46,7 +46,7 @@
 											<a class="image fit"><img src="images/Inky.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Blinky.png" alt=""></a>
+											<a class="image fit"><img src="images/BlinkyMainMenu.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="images/Pinky.png" alt=""></a>
