--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -72,7 +72,7 @@
 
 						<!-- Contact -->
 							<article id="contact" class="panel">
-								<header>
+								<header style="text-align:centre">
 									<h2> <u>Main Concepts Developed</u></h2>
 								</header>
 								
