--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -101,6 +101,7 @@
 									</div>
 
 									<div class="col-4 col-4-medium col-12-small">
+										<a class="image fit"><img src="images/MazeParts3.png"></a>
 										<a class="image fit"><img src="images/MazeParts1.png"></a>
 										<a class="image fit"><img src="images/MazeParts2.png"></a>
 									</div>
