--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -46,40 +46,64 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Name Entry.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Main Menu.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Credits.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Settings.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Mid-Game-2-Player-2.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Late Game 2 Player.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Mid-Game-2Player.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Mid-Game-Solo.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Mid-Game-Solo2.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Mid-Game-Solo3.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Pause Game.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Pre-Game-Countdown.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Pre-Game.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Rewards.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Score-Tally.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Start Of Solo Game.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Tutorial1.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Tutorial2.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Tutorial3.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Tutorial4.png" alt=""></a>
 										</div>
 									</div>
 								</section>
