--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -31,7 +31,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Lost My Marbles</h1>
-									<p>Mobile Game Developed Whilst Working For Curioso Games</p>
+									<p>Mobile Game Developed Whilst Working For <a href="https://www.curiosogames.com/"> Curioso Games </a></p>
 								</header>
 							</article>
 
