--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -38,7 +38,7 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Images And Videos</h2>
+									<h2><u>Images And Videos</u></h2>
 								</header>
 								<p>
 									Short Summary.
@@ -49,7 +49,7 @@
 											<a class="image fit"><img src="images/Name Entry.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Main Menu.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Main Menu.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="images/Credits.png" alt=""></a>
@@ -57,6 +57,24 @@
 										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="images/Settings.png" alt=""></a>
 										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Tutorial1.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Tutorial2.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Tutorial3.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Tutorial4.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Pre-Game.png" alt=""></a>
+										</div>
+										<div class="col-4 col-6-medium col-12-small">
+											<a class="image fit"><img src="images/Pre-Game-Countdown.png" alt=""></a>
+										</div>										
 										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="images/Mid-Game-2-Player-2.png" alt=""></a>
 										</div>
@@ -79,12 +97,6 @@
 											<a class="image fit"><img src="images/Pause Game.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Pre-Game-Countdown.png" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Pre-Game.png" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="images/Rewards.png" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
@@ -92,18 +104,6 @@
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="images/Start Of Solo Game.png" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Tutorial1.png" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Tutorial2.png" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Tutorial3.png" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Tutorial4.png" alt=""></a>
 										</div>
 									</div>
 								</section>
