--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -31,7 +31,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Lost My Marbles</h1>
-									<p>Mobile Game Developed Whilst Working For <a href="https://www.curiosogames.com/"> Curioso Games </a></p>
+									<p>Mobile Game Developed Whilst Working For <a href="https://www.curiosogames.com/" target="_blank"> Curioso Games </a></p>
 								</header>
 							</article>
 
@@ -40,9 +40,7 @@
 								<header>
 									<h2><u>Images And Videos</u></h2>
 								</header>
-								<p>
-									Short Summary.
-								</p>
+								
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
