--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -44,64 +44,64 @@
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Name Entry.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Name Entry.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Main Menu.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Main Menu.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Credits.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Credits.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Settings.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Settings.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Tutorial1.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Tutorial1.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Tutorial2.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Tutorial2.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Tutorial3.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Tutorial3.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Tutorial4.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Tutorial4.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Pre-Game.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Pre-Game.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Pre-Game-Countdown.png" alt=""></a>
+											<a class="image fit"><img src="images/Pre-Game-Countdown.jpg" alt=""></a>
 										</div>										
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Mid-Game-2-Player-2.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Mid-Game-2-Player-2.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Late Game 2 Player.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Late Game 2 Player.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Mid-Game-2Player.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Mid-Game-2Player.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Score-Tally.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Score-Tally.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Start Of Solo Game.png" alt=""></a>
+											<a class="image fit"><img src="images/Start Of Solo Game.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Mid-Game-Solo3.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Mid-Game-Solo3.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Mid-Game-Solo2.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Mid-Game-Solo2.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Mid-Game-Solo.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Mid-Game-Solo.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Pause Game.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Pause Game.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Rewards.png" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Rewards.jpg" alt=""></a>
 										</div>
 									</div>
 								</section>
