--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -71,7 +71,7 @@
 											<a class="image fit"><img src="Marbles Images/Pre-Game.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Pre-Game-Countdown.jpg" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Pre-Game-Countdown.jpg" alt=""></a>
 										</div>										
 										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="Marbles Images/Mid-Game-2-Player-2.jpg" alt=""></a>
@@ -86,7 +86,7 @@
 											<a class="image fit"><img src="Marbles Images/Score-Tally.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Start Of Solo Game.jpg" alt=""></a>
+											<a class="image fit"><img src="Marbles Images/Start Of Solo Game.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="Marbles Images/Mid-Game-Solo3.jpg" alt=""></a>
