--- a/Rituals/index.html
+++ b/Rituals/index.html
@@ -31,7 +31,7 @@
 							<article id="home" class="panel intro">
 								<header>
 									<h1>Rituals: Book Of Skog</h1>
-									<p>Mobile Game Developed Whilst Working For <a href="CuriosoGames.com"> Curioso Games </a></p>
+									<p>Mobile Game Developed Whilst Working For <a href="https://www.curiosogames.com/" target="_blank"> Curioso Games </a></p>
 								</header>
 							</article>
 
