--- a/Rituals/index.html
+++ b/Rituals/index.html
@@ -88,7 +88,7 @@
 											<a class="image fit"><img src="images/Sub Map2.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a class="image fit"><img src="images/Tutorial1.jpg" alt=""></a>
+											<a class="image fit"><img src="images/Turoial1.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="images/Tutorial 6.jpg" alt=""></a>
