--- a/Rituals/index.html
+++ b/Rituals/index.html
@@ -38,11 +38,8 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Images And Videos</h2>
+									<h2> <u> Images And Videos </u> </h2>
 								</header>
-								<p>
-									Short Summary
-								</p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
@@ -130,7 +127,7 @@
 						<!-- Contact -->
 							<article id="contact" class="panel">
 								<header>
-									<h2>Concepts I Developed</h2>
+									<h2><u>Main Concepts Developed</u></h2>
 								</header>
 								
 								<h4> <u> Pin System. </u> </h4>
