--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -34,7 +34,7 @@
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2><u>Demo Images and Videos</u></h2>
+									<h2><u>Gameplay Images</u></h2>
 								</header>
 		
 								<section>
