--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/sky.jpg"/></span>
+							<span class="image avatar48"><img src="images/Profile Picture.jpeg"/></span>
 							<h1 id="title">Brandon Roberts</h1>
 							<p>Computer Games Programmer</p>
 						</div>
