--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 
 							<!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
-							<p align="left">I am currently a first year computer games programmng student studying at Staffordshire University, who worked as a programmer for a local mobile games company, Curioso Games, for 7 months during 2019/2020. Whilst at Curioso we used Unity extensivly, taking full advantage of the rendering, audio and animation systems contained within the engine in order to create two of the games featured in this portfolio. These games are Lost my Marbles and Rituals: Book of Skog.  </br> </br>
+							<p align="left">I am currently a first year computer games programmng student studying at Staffordshire University, who worked as a programmer for a local mobile games company, Curioso Games, for 7 months during 2019/2020. Whilst at Curioso we used Unity extensivly, taking advantage of the rendering, audio and animation systems contained within the engine in order to create two of the games featured in this portfolio. These games are Lost my Marbles and Rituals: Book of Skog.  </br> </br>
 
 							I have been programming projects in C++, using multiple versions of visual studio, for around 4 years now. During that time my programming knowledge and abilty has improved through me tasking myself with increasingly more difficult projects over the years. These were in the form of game jams, retro game recreations or, most recently, developing projects for my degree. </br> </br>
 				
-							The aim from undertaking a degree in computer games programming is to firstly increase my knowledge within the area of games programming, and also to increase my employability. So that when I graduate securing a dream job is a more realistic prospect.
+							The aim from undertaking a degree in computer games programming is to firstly increase my knowledge within the area of games programming, and also to increase my employability. So that, when I graduate, securing a dream job is a more realistic prospect.
 							</p>
 
 						</div>
