--- a/Rituals/index.html
+++ b/Rituals/index.html
@@ -156,7 +156,7 @@
 								   Furthermore, when the level is selected the settings stored in the 'Pin' are displayed and passed into the loading level when the level is entered. This system also accomidates setting that the 'pin' loads into another world map, instead of a level. This allows for the world map screen traversion.</p>
 								
 								<h4> <u> Tutorials. </u> </h4>
-								<p>During development I was responsible for creating and implementing the majority of the tutorial levels, including the board piece layout within the tutorial levels. This required ensuring that there were no accidentally possibe moves that could ruin the intended way of playing through the level. As this would have locked the player in the level without a way to exit. </br>
+								<p>During development I was responsible for creating and implementing the majority of the tutorial levels, including the board piece layout within the tutorial levels, and the explanation sequencing. This required ensuring that there were no accidentally possibe moves that could ruin the intended way of playing through the level. As this would have locked the player in the level without a way to exit. </br>
                                                                    Creating the tutorials mostly consisted of creating the initial idea, and they playtesting repeatly to ensure there were no unintential movements possible.</p>
 								
 								<h4> <u> Level Transitions. </u> </h4>
