--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -124,8 +124,10 @@
 						                        To go about this task I had a few initial questions to decide on. These being, how does the AI scale with the player's skill level, should the AI be taught over time and then the improved AI played back, or if it should determine the move based on some criteria. </br> 
 									The final AI goes through a few main steps: </br>
 		
-									Initialisation. This is where the AI is given a random skill level ranking that is around the player's. This skill level is determined internally as a value between 0 and the skill level count. Making the opponent play at the player's skill level is done through using this value. </br>
-									
+									Initialisation. This is where the AI is given a random skill level ranking that is around the player's. This skill level is determined internally as a value between 0 and the skill level count. 
+									Making the opponent play at the player's skill level is done through using this value. </br>
+									When the AI is making a decision as to a move a random number is chosen, if that number is greater than the current skill level scaled up to a 1->100 scale then a random move is chosen instead of calculating the best possible move.
+									If this random occurance doesnt happen then the best possible move is calculated, based off the current board, and is carried out.
 								</p>
 								
 								<h4> <u> SFX Implementing </u> </h4>
