--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -115,15 +115,16 @@
 								
 								<h4> <u> Overview: </u> </h4>
 								<p>
-									The Curioso Marbles project was my first professionally developed title that has been published. Because of this I focused on developing everything within it as professioanlly as possible, as this was also my first experience of working in a games studio. </br>
-									For this project I developed the AI opponent and the ranking system. And I also implemented the music and sfx, along with doing QA towards the end of the project, fixing bugs as they came up.
+									The Curioso Marbles project was my first professionally developed title that has been published. Because of this I focused on developing everything within it as professionally as possible, as this was also my first experience of working in a games studio. </br>
+									For this project I developed the AI opponent and the ranking system as well as implemented the music and sfx. Along with doing QA towards the end of the project.
 								</p>
 								
 								<h4> <u> Opponent AI: </u> </h4>
 								<p>
 									There needed to be an AI opponent developed for the Vs mode, so I was tasked with developing a realistic 'human' opponent player. </br>
-						                        To go about this task I had a few initial questions to decide on. These being, how does the AI scale with the player's skill level, should the AI be taught over time and then the improved AI played back, or if it should determine the move based on some criteria. </br> 
-									The final AI goes through a few main steps: </br>
+						                        To go about this task I had a few initial questions to decide on. These being, how does the AI scale with the player's skill level, how should the AI decide what move it should do and how should the AI react to the constantly changing enviroment </br> 
+									Solving these questions took a fair bit of experimentation and reworking </br>
+									The final AI goes through a these steps: </br>
 		
 									Initialisation. This is where the AI is given a random skill level ranking that is around the player's. This skill level is determined internally as a value between 0 and the skill level count. 
 									Making the opponent play at the player's skill level is done through using this value. </br>
