--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -123,14 +123,17 @@
 								<p>
 									There needed to be an AI opponent developed for the Vs mode, so I was tasked with developing a realistic 'human' opponent player. </br>
 						                        To go about this task I had a few initial questions to decide on. These being, how does the AI scale with the player's skill level, how should the AI decide what move it should do and how should the AI react to the constantly changing enviroment </br> 
-									Solving these questions took a fair bit of experimentation and reworking. This is how the final AI works: </br>
+									Solving these questions took a fair bit of experimentation and reworking. </br> 
+									This is how the final AI works: </br>
 								</p>
-
 				
 								<p>
-									This is where the AI is given a random skill level ranking that is around the player's. This skill level is determined internally as a value between 0 and the skill level count. 
-									Making the opponent play at the player's skill level is done through using this value through adding an element of randomness to their decisions. When the AI is making a decision as to a move a random number is chosen, if that number is greater than the current skill level scaled up to a 1->100 scale then a random move is chosen instead of calculating the best possible move.
-									If this random occurance doesnt happen then the best possible move is calculated, based off the current board, and is carried out.
+									The AI is given a random skill level that is within a boundary of the player's. This skill level is determined internally as a value between 0 and the skill level count, which will make the decision making manipulation easier to handle. 
+									This skill level is used to make the AI play at the player's skill level through using this value give the chance of a random move been performed, instead of the best calculated move. When the AI is making a decision as to a move a random number is chosen, if that number is greater than the current skill level scaled up to a 1->100 scale then a random move is chosen. This results in the higher level opponents making worse moves a lot less than in lower level matches.
+									If this random occurance doesnt happen then the best possible move is calculated, based off the current board, and is carried out. </br>
+									In order to calculate the best possible move the AI goes through some steps: a loop across the board's columns to check the amount of connecting marbles of the same colour to the top most marbles colour in that column. Once the sweep has finished then the best position for the AI's current marbles colour is calculated, taking into consideration the secondary marble's colour. If no good positions are possible for the primary colour then the check switches to checking for the secondary colour.
+									If both colours are found to have good positions next to each other then this is ranked higher than just a singular colour match. As a result the AI will position the marbles into the correct orientation for this double match to happen. </br>
+									Once the best position has been calculated for the current marbles then the best positional move is calculated, this is only done when the marble is not currently moving, to reduce the unnessary calls to this calculation. If the random check from before passes then the move calculated is performed. If the marbles are already in the correct column and orientation then a 'swipe down' move is performed. Making the marbles fast fall into position.
 								</p>
 								
 								<h4> <u> SFX Implementing </u> </h4>
