--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -122,7 +122,7 @@
 								<h4> <u> Opponent AI: </u> </h4>
 								<p>
 									There needed to be an AI opponent developed for the Vs mode, so I was tasked with developing a realistic 'human' opponent player. </br>
-						                        To go about this task I had a few initial questions to decide on. These being, how does the AI scale with the player's skill level, how should the AI decide what move it should do and how should the AI react to the constantly changing enviroment </br> 
+						                        To go about this task I had a few initial questions to decide on. These being, how does the AI scale with the player's skill level, how should the AI decide what move it should do and how should the AI react to the constantly changing enviroment. 
 									Solving these questions took a fair bit of experimentation and reworking. </br> 
 									This is how the final AI works: </br>
 								</p>
