--- a/Rituals/index.html
+++ b/Rituals/index.html
@@ -150,7 +150,7 @@
 								</header>
 								
 								<h4> <u> Pin System. </u> </h4>
-								<p>As the project was planned to have a fair amount of levels, there therefore, needed to be a way to efficiently traverse the multiple worlds and levels in an intuitive manner. 
+								<p>As the project was planned to have a fair amount of levels there, therefore, needed to be a way to efficiently traverse the multiple worlds and levels in an intuitive manner. 
 								   My solution to this was to develop an abstract 'Pin' system for level and world navigation. </br> </br>
 								   This system allowed for a texture to be selected, which defined the collision for the selection, along with what type of level this was, be it move capped, time restricted, or otherwise. This system also allowed for modification of the amount of enemies within the level, along with the starting health they have. </br> </br>
 								   Furthermore, when the level is selected the settings stored in the 'Pin' are displayed and passed into the loading level when the level is entered. This system also accomidates setting that the 'pin' loads into another world map, instead of a level. This allows for the world map screen traversion.</p>
