--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 								<h2 class="alt"> Brandon Roberts</h2>
 								<p>
 									Welcome to my portfolio! </br> 
-									This portfolio contains images of projects I have developed. Clicking / tapping on any them takes you to a sub-website that contains videos, images, and a description as to what that project involved to create, and how I achieved that goal. </br> 
-									There is also an about me section at the bottom of this page.
+									This portfolio contains descriptions and content depicting the main projects I have developed so far in my career. Clicking / tapping on any of the icons below takes you to a sub-website that is soley focused on that one project. Including what the project involved to create, how I achieved that goal and what the main points in development there were. </br> 
+									At the bottom of the page there is also an about me section detailing who I am and my background in computer games programming.
 								</p>
 							</header>
 						</div>
