--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 
 							<!-- <a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a> -->
 
-							<p align="left">I am currently a first year computer games programmng student studying at Staffordshire University, who worked as a programmer for a local mobile games company, Curioso Games, for 7 months during 2019/2020. Whilst at Curioso we used Unity extensivly, taking advantage of the rendering, audio and animation systems contained within the engine in order to create two of the games featured in this portfolio. These games are Lost my Marbles and Rituals: Book of Skog.  </br> </br>
+							<p align="left">Currently I am a first year computer games programmng student studying at Staffordshire University who, for a period of 7 months during 2019/2020, worked as a programmer for a local mobile games company, Curioso Games. Whilst at this company I worked in a small team to develop two of the games listed in this portfolio: Marbles, and Rituals. Whilst at Curioso we used Unity extensivly, taking advantage of the rendering, audio and animation systems contained within the engine in order to create the engaging and interesting games shown above.</br> </br>
 
-							I have been programming projects in C++, using multiple versions of visual studio, for around 4 years now. During that time my programming knowledge and abilty has improved through me tasking myself with increasingly more difficult projects over the years. These were in the form of game jams, retro game recreations or, most recently, developing projects for my degree. </br> </br>
+							For the past 4 years I have been programming projects in C++, using versions of visual studio that range from 2015 to 2019. During this time my programming knowledge and abilty has improved dramatically. This has been through me tasking myself with increasingly more difficult projects over the years. These were in the form of game jams, retro game recreations or, most recently, developing projects for my degree. </br> </br>
 				
-							The aim from undertaking a degree in computer games programming is to firstly increase my knowledge within the area of games programming, and also to increase my employability. So that, when I graduate, securing a dream job is a more realistic prospect.
+							The goal of undertaking a degree in computer games programming is mainly to increase my knowledge within the area of games programming. Along with also to increasing my employability overall. This is so that, when I graduate, securing a dream job is a more realistic prospect.
 							</p>
 
 						</div>
