--- a/Pacman/index.html
+++ b/Pacman/index.html
@@ -92,8 +92,8 @@
 								
 								<p>
 									One of my main aims whilst developing this project was to have all levels support being fully customised through just changing a text file, and maybe a sprite sheet. 
-									Therefore, during the initial development stages I focused on not hard coding as much of the game as I could. The result from this is that a text file, within a folder named 'BackgroundMaps', that maps the sprite indexes of sprite sheets found in the directory 'Textures/Backgrounds', to the screen. </br>
-									This mapping of textures results in the following images mapping to each other, depending on which sprite sheet you use: </br>
+									Therefore, during the initial development stages I focused on not hard coding as much of the game as I could, (A pholosophy I have since embraced as an aim for every project I make). The result from this is that a text file, within a folder named 'BackgroundMaps', maps the sprite indexes of sprite sheets found in the directory 'Textures/Backgrounds', to the screen as shown below.</br>
+									This mapping of textures results in the following images mapping to each other, depending on which sprite sheet you use, and which indexes you use: </br>
 								</p>
 		
 								<div class="row">
