--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 									<article class="item">
 										<a href="Super Mario 3/index.html" target = "_blank" class="image fit"><img src="images/Super Mario Bros 3 Image.png" alt="" /></a>
 										<header>
-											<h3>Super Mario 3 Re-Creation</h3>
+											<h3>Super Mario 3 Project</h3>
 										</header>
 									</article>
 								</div>
