--- a/GEC OpenGL Project/index.html
+++ b/GEC OpenGL Project/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>OpenGL Project</title>
+		<title>OpenGL Project (WORK IN PROGRESS)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
