--- a/Marbles/index.html
+++ b/Marbles/index.html
@@ -43,7 +43,7 @@
 								
 								<section>
 									<div class="row">
-										<iframe width = "420" height = "315" src = "https://studio.youtube.com/video/Crk5be9rgP4/edit"> </iframe>
+										<iframe width = "420" height = "315" src = "https://studio.youtube.com/video/Crk5be9rgP4/edit" autoplay=0 mute=1> </iframe>
 										
 										<div class="col-4 col-6-medium col-12-small">
 											<a class="image fit"><img src="Marbles Images/Name Entry.jpg" alt=""></a>
