--- a/Rituals/index.html
+++ b/Rituals/index.html
@@ -173,7 +173,7 @@
 				<!-- Footer -->
 					<div id="footer">
 						<ul class="copyright">
-							<li>Brandon Roberts 2021</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Brandon Roberts 2021</li><li>Base Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</div>
 
